--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -52,11 +52,11 @@
     <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink">
-    {% if post.collection == 'portfolio' %}
-    Read more
-    {% else %}
-    Read?
-    {% endif}
+        {% if post.collection == 'portfolio' %}
+        Read more
+        {% else %}
+        Read?
+        {% endif %}
   </a></strong></p></p>
     {% endif %}
     
