--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -54,9 +54,8 @@
         {% if post.collection != 'teaching' %}
             <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
         {% else %}
-            <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink">
+            <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
         {% endif %}
-  </a></strong></p></p>
     {% endif %}
     
     {% if post.citation and post.paperurl %}
