--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -26,15 +26,17 @@
       </div>
     {% endif %}
 
+  {% if post.collection == 'teaching' %}
+  <h2 >{{ title }}</h2>
+      {% else %}
     <h2 class="archive__item-title" itemprop="headline">
-      {% if post.collection == 'teaching' %}
-        {{ title }}
-      {% elsif post.link %}
+      {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
     </h2>
+      {% endif %}}
     
     {% if post.read_time %}
       <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
