--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -40,7 +40,7 @@
           </h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.institution }}</h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.area }}</h6>
-          {{ content.summary }}
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.summary }}</h6>
           <ul class="items">
             {% for item in content.courses %}
               <li>
